Fix: fix 2nd content-box align right

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ h1 {
 
 .content img {
   width: 588px;
-  margin: 0 64px 0 0;
+  margin-right: 64px;
 }
 
 .content h2 {
@@ -96,9 +96,20 @@ h1 {
 .content-description {
   font-size: 24px;
   font-weight: 500;
-
   margin-top: 24px;
   color: #374151;
+}
+
+#right {
+  text-align: right;
+}
+
+#right img {
+  margin-left: 64px;
+}
+
+#right .content-box {
+  margin-left: auto;
 }
 
 #bottom {
